После исправления багов